--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@vercel/node": "^2.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "remix-auth": "^3.2.2",
+    "remix-auth-form": "^1.1.2",
     "zod": "^3.17.10"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@remix-run/serve": "^1.6.5",
     "@types/react": "^17.0.47",
     "@types/react-dom": "^17.0.17",
+    "@types/secure-password": "^3.1.1",
     "autoprefixer": "^10.4.7",
     "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
